--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* all settings start */
+
 html {
   box-sizing: border-box;
 }
@@ -10,6 +12,11 @@ html {
   padding: 0;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 ul {
   list-style: none;
 }
@@ -17,6 +24,12 @@ ul {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+.wrapper {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .container {
@@ -31,11 +44,16 @@ body {
   font-family: "Montserrat", sans-serif;
   font-size: 16px;
   font-weight: 400;
+  line-height: 1.3;
 }
 
 .header {
   background-color: #151515;
 }
+
+/* all settings end */
+
+/* header start */
 
 .header-main {
   /* background-color: transparent; */
@@ -58,3 +76,63 @@ body {
   color: white;
   text-transform: uppercase;
 }
+
+/* header end */
+
+/* footer start */
+
+.footer {
+  background-color: #151515;
+  padding: 50px 0 32px;
+  color: #fff;
+}
+
+.footer__menu {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 50px;
+}
+
+.footer__menu-list {
+  max-width: 250px;
+}
+
+.footer__menu-title {
+  font-size: 24px;
+  font-weight: 700;
+  padding-bottom: 20px;
+}
+
+.footer__menu-item + .footer__menu-item {
+  padding-top: 20px;
+}
+
+.app {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  margin-bottom: 52px;
+}
+
+.footer__copy {
+  max-width: 800px;
+  margin: 0 auto 30px;
+  text-align: center;
+  font-size: 12px;
+}
+
+.copy__nav-list {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+}
+
+/* footer end */
+
+/* main start */
+
+.main {
+  flex-grow: 1;
+}
+
+/* main end */
