--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ body {
 /* header start */
 
 .header-main {
-  /* background-color: transparent; */
+  background-color: transparent;
 }
 
 .header__inner {
@@ -133,6 +133,30 @@ body {
 
 .main {
   flex-grow: 1;
+}
+
+.top {
+  color: #fff;
+  text-align: center;
+  padding-top: 105px;
+  padding-bottom: 50px;
+}
+
+.title {
+  padding-bottom: 40px;
+  font-size: 96px;
+  font-weight: 700;
+}
+
+.top__link {
+  background-color: #151515;
+  padding: 23px;
+  max-width: 430px;
+  width: 100%;
+  display: inline-block;
+  text-transform: uppercase;
+  font-size: 36px;
+  font-weight: 700;
 }
 
 /* main end */
