--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,10 @@ body {
 
 .header-main {
   background-color: transparent;
+  position: absolute;
+  z-index: 5;
+  left: 0;
+  right: 0;
 }
 
 .header__inner {
@@ -138,8 +142,12 @@ body {
 .top {
   color: #fff;
   text-align: center;
-  padding-top: 105px;
+  padding-top: 250px;
   padding-bottom: 50px;
+  position: absolute;
+  z-index: 5;
+  left: 0;
+  right: 0;
 }
 
 .title {
@@ -157,6 +165,45 @@ body {
   text-transform: uppercase;
   font-size: 36px;
   font-weight: 700;
+}
+
+.swiper::after {
+  content: '';
+  background: rgba(21, 21, 21, 0.3);
+  position: absolute;
+  z-index: 5;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.swiper-slide {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+}
+
+.swiper-pagination-bullet {
+  width: 120px;
+  height: 3px;
+  background-color: #151515;
+  border-radius: 0;
+  opacity: 1;
+  margin: 0 15px !important;
+  bottom: 50px !important;
+}
+
+.swiper-pagination-bullet-active {
+  height: 6px;
+  background-color: #fff;
+  border-radius: 0;
+}
+
+
+.swiper-pagination-bullets.swiper-pagination-horizontal {
+  bottom: var(--swiper-pagination-bottom, 50px);
 }
 
 /* main end */
