--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ body {
 }
 
 .menu__list-link--active {
-  color: #06F;
+  color: #06f;
 }
 
 /* header end */
@@ -435,7 +435,7 @@ form {
 
 .blog__item-link {
   color: #fff;
-  background-color: #06F;
+  background-color: #06f;
   padding: 4px 20px;
 }
 
@@ -448,6 +448,83 @@ form {
   margin: 0 auto;
   text-align: center;
   display: block;
+}
+
+.choose {
+  padding: 100px 0 150px;
+}
+
+.tabs {
+  margin-bottom: 70px;
+}
+
+.tabs__btn {
+  padding: 0 150px;
+  display: flex;
+  justify-content: space-between;
+  gap: 80px;
+  padding-bottom: 100px;
+}
+
+.tabs__btn-item {
+  font-size: 24px;
+  font-weight: 700;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+}
+
+.tabs__btn-item--active {
+  color: #06f;
+}
+
+.tabs__content-item {
+  display: none;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 100px 40px;
+}
+
+.tabs__content-item.tabs__content-item--active {
+  display: grid;
+}
+
+.card {
+  text-align: center;
+}
+
+.card__img {
+  display: block;
+}
+
+.card__content {
+  padding: 0 5px;
+  border: 1px solid #06f;
+  border-top: 0;
+}
+
+.card__title {
+  padding-top: 20px;
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.card__text {
+  margin-bottom: 20px;
+}
+
+.card__price {
+  font-weight: 700;
+  margin-bottom: 20px;
+  font-size: 24px;
+}
+
+.card__link {
+  display: block;
+  color: #06f;
+  border: 1px solid #06f;
+  border-top: 0;
 }
 
 /* main end */
