--- a/css/style.css
+++ b/css/style.css
@@ -403,6 +403,7 @@ form {
   font-weight: 400;
   padding: 13px 61px;
   margin: 0 auto;
+  border: none;
 }
 
 .blog {
@@ -459,11 +460,10 @@ form {
 }
 
 .tabs__btn {
-  padding: 0 150px;
+  padding: 0 150px 100px;
   display: flex;
   justify-content: space-between;
   gap: 80px;
-  padding-bottom: 100px;
 }
 
 .tabs__btn-item {
@@ -495,6 +495,7 @@ form {
 
 .card__img {
   display: block;
+  width: 100%;
 }
 
 .card__content {
@@ -527,4 +528,212 @@ form {
   border-top: 0;
 }
 
+.menu__btn {
+  width: 30px;
+  height: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  display: none;
+}
+
+.menu__btn span {
+  height: 2px;
+  background-color: #fff;
+  width: 100%;
+}
+
 /* main end */
+
+/* media start */
+
+@media (max-width: 1180px) {
+  .important__list {
+    gap: 20px 30px;
+  }
+  .important__item-img {
+    width: 100%;
+  }
+  .tabs__content-item {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 1040px) {
+  .video__content {
+    width: 100%;
+  }
+  .tabs__btn {
+    padding: 0 0 50px;
+    gap: 20px;
+  }
+}
+
+@media (max-width: 860px) {
+  .menu__btn {
+    display: flex;
+  }
+  .menu__btn,
+  .logo {
+    position: relative;
+    z-index: 10;
+  }
+  .menu__list {
+    position: absolute;
+    z-index: inherit 5;
+    background-color: #151515;
+    flex-direction: column;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding-top: 200px;
+    height: 100vh;
+    align-items: center;
+    transform: translateY(-100%);
+    transition: transform 0.3s ease;
+  }
+  .menu__list.menu__list--active {
+    transform: translate(0);
+  }
+  .why-lease__list {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+  }
+  .important__list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .tabs__content-item {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 768px) {
+  .footer__menu {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 40px;
+  }
+  .video__content {
+    height: 400px;
+  }
+  .title {
+    font-size: 70px;
+  }
+  .top__link {
+    padding: 16px;
+    max-width: 360px;
+    font-size: 28px;
+  }
+  .swiper-pagination-bullet {
+    width: 60px;
+  }
+  .swiper-pagination-bullet-active {
+    height: 4px;
+  }
+}
+
+@media (max-width: 650px) {
+  .tabs__content-item {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .tabs__btn-item {
+    font-size: 18px;
+  }
+  .blog__items {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .contacts {
+    padding: 50px 0;
+  }
+  .form__input {
+    width: 100%;
+    margin-bottom: 50px;
+  }
+  .contacts__text {
+    padding: 0;
+  }
+}
+
+@media (max-width: 540px) {
+  .title {
+    font-size: 60px;
+  }
+  .top__link {
+    max-width: 310px;
+    font-size: 24px;
+  }
+  .swiper-pagination-bullets.swiper-pagination-horizontal {
+    margin: 0 10px;
+  }
+  .swiper-pagination-bullet {
+    width: 35px;
+  }
+  .why-lease__list {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .why-lease {
+    padding: 50px 0;
+  }
+  .section-title {
+    font-size: 34px;
+  }
+  .how-does__list {
+    padding: 30px 0 40px;
+  }
+  .how-does {
+    padding-bottom: 50px;
+  }
+  .video {
+    padding-bottom: 50px;
+  }
+  .video__content {
+    height: 200px;
+  }
+  .how-does__item {
+    padding: 65px 0 19px 0;
+    margin-right: auto;
+  }
+  .how-does__item::before {
+    right: 0;
+    margin: 0 auto;
+    width: 50px;
+    height: 50px;
+    font-size: 32px;
+  }
+  .important__list {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .app,
+  .copy__nav-list {
+    flex-direction: column;
+    align-items: center;
+  }
+  .copy__nav-list {
+    gap: 20px;
+  }
+  .blog__item-title {
+    margin-bottom: 10px;
+  }
+  .blog__item-link {
+    margin-left: auto;
+  }
+  .tabs__btn {
+    flex-direction: column;
+  }
+  .choose {
+    padding: 50px 0;
+  }
+  .tabs__content-item {
+    gap: 40px;
+  }
+  .blog {
+    padding-bottom: 50px;
+  }
+}
+
+/* media end */
